force-app/main/default/objects/Health_professional__c/Health_professional__c.object-meta.xml
<CustomObject>
    <label>Health professional</label>
    <nameField>
        <label>Health professional</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Health professionals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>