force-app/main/default/objects/Health_professional__c/fields/full_name__c.field-meta.xml
<CustomField>
    <fullName>full_name__c</fullName>
    <label>full name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>