force-app/main/default/objects/Health_professional__c/fields/last__c.field-meta.xml
<CustomField>
    <fullName>last__c</fullName>
    <label>last</label>
    <length>255</length>
    <type>Text</type>
</CustomField>