force-app/main/default/objects/Health_professional__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>first__c</columns>
    <columns>last__c</columns>
    <columns>email__c</columns>
    <columns>full_name__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>