force-app/main/default/objects/Health_professional__c/listViews/PRocessed.listView-meta.xml
<ListView>
    <fullName>PRocessed</fullName>
    <columns>NAME</columns>
    <columns>email__c</columns>
    <columns>full_name__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Processed__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>PRocessed</label>
</ListView>